--- a/src/styles/formStyles.css
+++ b/src/styles/formStyles.css
@@ -36,11 +36,7 @@
 
 .choose-regions .checkbox:focus + label{
     @apply outline outline-[#6C727F]
-}
-
-.choose-status{
-    
-}
+} 
 
 .choose-status label{
     @apply flex flex-row-reverse items-center justify-end gap-3 text-[#D2D5DA] text-sm font-semibold cursor-pointer
@@ -57,11 +53,11 @@
  .choose-status .checkbox + span::after{
     content: ""; 
     border-width: 0 3px 3px 0;
-    @apply absolute top-[5px] left-[9px] w-[5px] h-[10px] border-white rotate-45 hidden
+    @apply absolute top-[2px] left-[9px] w-[7px] h-[15px] border-white rotate-45 hidden
  }
 
  .choose-status .checkbox:checked + span{
-    @apply bg-[#4E80EE] outline-none
+    @apply bg-[#4E80EE] outline outline-[3px] outline-[#4E80EE]
  }
 
  .choose-status .checkbox:checked + span::after{ 
